<?xml version="1.0" encoding="utf-8"?>
<!--
  John Selmys
  2011
-->
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/background"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="30dip"
   android:id="@+id/main"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
      <TextView
         android:text="@string/main_title"
         android:textColor="@color/foreground"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="24dp" />
      <Button
         android:id="@+id/browse_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/browse_label" />
      <Button
         android:id="@+id/search_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/search_label" />
      <Button
         android:id="@+id/random_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/random_label" />
      <Button
         android:id="@+id/about_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/about_label" />
      <Button
         android:id="@+id/exit_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="@string/exit_label" />
   </LinearLayout>
</LinearLayout>
